--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Foodfy</title>
-    <link rel="stylesheet" href="styles.css">
-
-
+    <link rel="stylesheet" href="/src/styles.css">
+    <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    
+    <header>
+        <div class="links">
+            <a href="index.html" id="foodfy"><img src="/assets/logo.png" alt=""></a>
+            <a href="/" id="sobre">Sobre</a>
+            <a href="/" id="receitas">Receitas</a>
+        </div>
+    </header>
+
+    <section>
+        <div class="container">
+            <div class="container__info">
+                <h1>As melhores Receitas</h1>
+                <p>Aprenda a construir os melhores pratos com receitas criadas por profissionais do mundo inteiro</p>
+            </div>
+            <div class="container__img">
+                <img src="/assets/chef.png" alt="chef">
+            </div>
+        </div>
+    </section>
 
 
     <script src="scripts.js"></script>
