--- a/src/index.html
+++ b/src/index.html
@@ -10,22 +10,95 @@
 <body>
     <header>
         <div class="links">
-            <a href="index.html" id="foodfy"><img src="/assets/logo.png" alt=""></a>
-            <a href="/" id="sobre">Sobre</a>
-            <a href="/" id="receitas">Receitas</a>
+            <div class="logo">
+                <a href="index.html" id="foodfy"><img src="/assets/logo.png" alt=""></a>
+            </div>
+            <div class="menu">
+            <a href="index.html" id="sobre">Sobre</a>
+            <a href="index.html" id="receitas">Receitas</a>
+            </div>
         </div>
     </header>
 
     <section>
-        <div class="container">
-            <div class="container__info">
-                <h1>As melhores Receitas</h1>
-                <p>Aprenda a construir os melhores pratos com receitas criadas por profissionais do mundo inteiro</p>
+        <div class="wrapper">   
+            <div class="container">
+                <div class="container__info">
+                    <h1>As melhores receitas</h1>
+                    <p>Aprenda a construir os melhores pratos com receitas criadas por profissionais do mundo inteiro.</p>
+                </div>
+                <div class="container__img">
+                    <img src="/assets/chef.png" alt="chef">
+                </div>
             </div>
-            <div class="container__img">
-                <img src="/assets/chef.png" alt="chef">
+        </div> 
+
+    <h2>Mais acessadas</h2>
+
+        <div class="cards">
+
+            <div class="card">
+                <div class="card_img">
+                    <img src="/assets/burger.png" alt="triplo_burguer">
+                </div>
+                <div class="content">
+                    <p class="revenue">Triplo bacon burger</p>
+                    <p class="author">por Jorge Relato</p>
+                </div>
             </div>
+
+            <div class="card">
+                <div class="card_img">
+                    <img src="/assets/burger.png" alt="triplo_burguer">
+                </div>
+                <div class="content">
+                    <p class="revenue">Triplo bacon burger</p>
+                    <p class="author">por Jorge Relato</p>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card_img">
+                    <img src="/assets/burger.png" alt="triplo_burguer">
+                </div>
+                <div class="content">
+                    <p class="revenue">Triplo bacon burger</p>
+                    <p class="author">por Jorge Relato</p>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card_img">
+                    <img src="/assets/burger.png" alt="triplo_burguer">
+                </div>
+                <div class="content">
+                    <p class="revenue">Triplo bacon burger</p>
+                    <p class="author">por Jorge Relato</p>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card_img">
+                    <img src="/assets/burger.png" alt="triplo_burguer">
+                </div>
+                <div class="content">
+                    <p class="revenue">Triplo bacon burger</p>
+                    <p class="author">por Jorge Relato</p>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="card_img">
+                    <img src="/assets/burger.png" alt="triplo_burguer">
+                </div>
+                <div class="content">
+                    <p class="revenue">Triplo bacon burger</p>
+                    <p class="author">por Jorge Relato</p>
+                </div>
+            </div>
+
         </div>
+
     </section>
 
 
