--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
 
             <div class="card">
                 <div class="card_img">
-                    <img src="/assets/burger.png" alt="triplo_burguer">
+                    <img src="/assets/pizza.png" alt="pizza">
                 </div>
                 <div class="content">
                     <p class="revenue">Triplo bacon burger</p>
@@ -59,7 +59,7 @@
 
             <div class="card">
                 <div class="card_img">
-                    <img src="/assets/burger.png" alt="triplo_burguer">
+                    <img src="/assets/espaguete.png" alt="espaguete">
                 </div>
                 <div class="content">
                     <p class="revenue">Triplo bacon burger</p>
@@ -69,7 +69,7 @@
 
             <div class="card">
                 <div class="card_img">
-                    <img src="/assets/burger.png" alt="triplo_burguer">
+                    <img src="/assets/lasanha.png" alt="lasanha">
                 </div>
                 <div class="content">
                     <p class="revenue">Triplo bacon burger</p>
@@ -79,7 +79,7 @@
 
             <div class="card">
                 <div class="card_img">
-                    <img src="/assets/burger.png" alt="triplo_burguer">
+                    <img src="/assets/doce.png" alt="doce">
                 </div>
                 <div class="content">
                     <p class="revenue">Triplo bacon burger</p>
@@ -89,7 +89,7 @@
 
             <div class="card">
                 <div class="card_img">
-                    <img src="/assets/burger.png" alt="triplo_burguer">
+                    <img src="/assets/asinhas.png" alt="asinhas">
                 </div>
                 <div class="content">
                     <p class="revenue">Triplo bacon burger</p>
@@ -99,6 +99,19 @@
 
         </div>
 
+        <div class="modal-overlay">
+            <div class="modal-content">
+                <div class="modal-img">
+                    <img src="" alt="">
+                </div>
+                <div class="modal-title">
+                    <p class="title-revenue"></p>
+                    <p class="modal-autor"></p>
+                </div>
+                
+
+            </div>
+        </div>
     </section>
 
 
