--- a/src/index.html
+++ b/src/index.html
@@ -40,11 +40,11 @@
 
             <div class="card">
                 <div class="card_img">
-                    <img src="/assets/burger.png" alt="triplo_burguer">
+                    <img id="burger.png" src="/assets/burger.png" alt="triplo_burguer">
                 </div>
                 <div class="content">
-                    <p class="revenue">Triplo bacon burger</p>
-                    <p class="author">por Jorge Relato</p>
+                    <p class="revenue" id="Triplo">Triplo bacon burger</p>
+                    <p class="author" id="Jorge">por Jorge Relato</p>
                 </div>
             </div>
 
@@ -53,8 +53,8 @@
                     <img src="/assets/pizza.png" alt="pizza">
                 </div>
                 <div class="content">
-                    <p class="revenue">Triplo bacon burger</p>
-                    <p class="author">por Jorge Relato</p>
+                    <p class="revenue">Pizza 4 estações</p>
+                    <p class="author">por Fabiana Melo</p>
                 </div>
             </div>
 
@@ -63,8 +63,8 @@
                     <img src="/assets/espaguete.png" alt="espaguete">
                 </div>
                 <div class="content">
-                    <p class="revenue">Triplo bacon burger</p>
-                    <p class="author">por Jorge Relato</p>
+                    <p class="revenue">Espaguete ao alho</p>
+                    <p class="author">por Júlia Kinoto</p>
                 </div>
             </div>
 
@@ -73,8 +73,8 @@
                     <img src="/assets/lasanha.png" alt="lasanha">
                 </div>
                 <div class="content">
-                    <p class="revenue">Triplo bacon burger</p>
-                    <p class="author">por Jorge Relato</p>
+                    <p class="revenue">Lasanha mac n' cheese</p>
+                    <p class="author">Por Juliano Vieira</p>
                 </div>
             </div>
 
@@ -83,8 +83,8 @@
                     <img src="/assets/doce.png" alt="doce">
                 </div>
                 <div class="content">
-                    <p class="revenue">Triplo bacon burger</p>
-                    <p class="author">por Jorge Relato</p>
+                    <p class="revenue">Docinhos pão-do-céu</p>
+                    <p class="author">por Ricardo Golvea</p>
                 </div>
             </div>
 
@@ -93,8 +93,8 @@
                     <img src="/assets/asinhas.png" alt="asinhas">
                 </div>
                 <div class="content">
-                    <p class="revenue">Triplo bacon burger</p>
-                    <p class="author">por Jorge Relato</p>
+                    <p class="revenue" id="">Asinhas de frango ao barbecue</p>
+                    <p class="author">por Vania Steroski</p>
                 </div>
             </div>
 
@@ -102,17 +102,17 @@
         
     </section>
 
-    <div class="modal-overlay">
+    <div class="modal-overlay ">
         <div class="modal">
             <div class="modal-img">
-                <img src="/assets/lasanha.png" alt="">
+                <img src="" alt="">
             </div>
             <div class="modal-title">
-                <p class="title-revenue">Lasanha</p>
-                <p class="modal-autor">José</p>
+                <p class="title-revenue"></p>
+                <p class="modal-autor"></p>
             </div>
             <div class="close-modal">
-                <a>Fechar Receita</a>
+                <a>Fechar receita</a>
             </div>
         </div>
     </div>
