--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
 
             <div class="card">
                 <div class="card_img">
-                    <img id="burger.png" src="/assets/burger.png" alt="triplo_burguer">
+                    <img id="burger.png" src="/assets/burger.png" alt="burger.png">
                 </div>
                 <div class="content">
                     <p class="revenue" id="Triplo">Triplo bacon burger</p>
