--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
                 <a href="index.html" id="foodfy"><img src="/assets/logo.png" alt=""></a>
             </div>
             <div class="menu">
-            <a href="index.html" id="sobre">Sobre</a>
+            <a href="sobre.html".html" id="sobre">Sobre</a>
             <a href="index.html" id="receitas">Receitas</a>
             </div>
         </div>
