--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
             </div>
             <div class="menu">
             <a href="sobre.html".html" id="sobre">Sobre</a>
-            <a href="index.html" id="receitas">Receitas</a>
+            <a href="receitas.html" id="receitas">Receitas</a>
             </div>
         </div>
     </header>
@@ -34,7 +34,7 @@
             </div>
         </div> 
 
-    <h2>Mais acessadas</h2>
+    <h2 class="subtitle">Mais acessadas</h2>
 
         <div class="cards">
 
@@ -97,10 +97,18 @@
                     <p class="author">por Vania Steroski</p>
                 </div>
             </div>
-
         </div>
         
     </section>
+
+    <footer>
+        <div class="footer">
+            <p class="copyright">
+                Todos os direitos reservados, receitas Foodfy.
+            </p>
+        </div>
+    </footer>
+
 
     <div class="modal-overlay ">
         <div class="modal">
