--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
 
         <div class="cards">
 
-            <div class="card">
+            <div class="card" id="burguer.png">
                 <div class="card_img">
                     <img id="burger.png" src="/assets/burger.png" alt="burger.png">
                 </div>
