--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
 
             <div class="card" id="burguer.png">
                 <div class="card_img">
-                    <img id="burger.png" src="/assets/burger.png" alt="burger.png">
+                    <img src="/assets/burger.png" alt="burger">
                 </div>
                 <div class="content">
                     <p class="revenue" id="Triplo">Triplo bacon burger</p>
@@ -93,7 +93,7 @@
                     <img src="/assets/asinhas.png" alt="asinhas">
                 </div>
                 <div class="content">
-                    <p class="revenue" id="">Asinhas de frango ao barbecue</p>
+                    <p class="revenue">Asinhas de frango ao barbecue</p>
                     <p class="author">por Vania Steroski</p>
                 </div>
             </div>
@@ -113,7 +113,7 @@
     <div class="modal-overlay ">
         <div class="modal">
             <div class="modal-img">
-                <img src="" alt="">
+                <iframe src="" frameborder="0"></iframe>
             </div>
             <div class="modal-title">
                 <p class="title-revenue"></p>
